chore: use mariadb root user/password

--- a/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
         MINIO_ROOT_USER: "{{ .MINIO_ROOT_USER }}"
         MINIO_ROOT_PASSWORD: "{{ .MINIO_ROOT_PASSWORD }}"
         MARIADB_ROOT_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
-        MARIADB_KUBEFLOW_PASSWORD: " {{ .KUBEFLOW_MARIADB_PASSWORD }}"
+        MARIADB_ROOT_USER: root
   dataFrom:
     - extract:
         key: minio
