--- a/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
@@ -12,8 +12,8 @@ spec:
     name: kubeflow-secret
     template:
       data:
-        KUBEFLOW_MARIADB_USER: "{{ .KUBEFLOW_MARIADB_USER }}"
-        KUBEFLOW_MARIADB_PASSWORD: "{{ .KUBEFLOW_MARIADB_PASSWORD }}"
+        MARIADB_ROOT_USER: root
+        MARIADB_ROOT_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
         KUBEFLOW_MARIABDB_HOST: mariadb.database.svc.cluster.local
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
