chore: fix secret

--- a/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
@@ -19,6 +19,6 @@ spec:
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
-        key: kubeflow
+        key: mariadb
     - extract:
         key: minio
