--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
@@ -12,10 +12,9 @@ spec:
     name: oauth2-proxy-secret
     template:
       data:
-        clientID: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+        client-id: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
         clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
         cookieSecret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
   dataFrom:
     - extract:
         key: kubeflow
-
