--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
@@ -13,8 +13,8 @@ spec:
     template:
       data:
         client-id: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
-        clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
-        cookieSecret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
+        client-secret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        cookie-secret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
   dataFrom:
     - extract:
         key: kubeflow
