feat: deploy kubeflow for kubeflow

--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -7,5 +7,5 @@ components:
 resources:
   - ./argo-workflows/ks.yaml
   - ./kubeflow-crds/ks.yaml
-  # - ./kubeflow/ks.yaml
+  - ./kubeflow/ks.yaml
   # - ./profile/ks.yaml
