--- a/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
@@ -9,7 +9,8 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: kubeflow-secret
+    # NOTE: required by kubeflow helm chart
+    name: mlpipeline-minio-artifact
     template:
       data:
         MARIADB_ROOT_USER: root
