--- a/.github/workflows/sync-kubeflow.yaml
+++ b/.github/workflows/sync-kubeflow.yaml
@@ -2,13 +2,13 @@ name: Sync Kubeflow Manifests
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Daily at 00:00 UTC
+    - cron: "0 0 * * *" # Daily at 00:00 UTC
   workflow_dispatch:
     inputs:
       upstream_ref:
-        description: 'Kubeflow tag or branch to sync (leave blank for latest tag)'
+        description: "Kubeflow tag or branch to sync (leave blank for latest tag)"
         required: false
-        default: 'v1.10.0'
+        default: "v1.10.0"
 
 permissions:
   contents: write
@@ -18,13 +18,12 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     outputs:
-      upstream_ref: ${{ steps.ref.outputs.ref }}
       previous_ref: ${{ steps.prev.outputs.prev }}
     steps:
       - name: Get latest tag or use provided input
         id: resolve
         run: |
-          input_ref="${{ github.event.inputs.upstream_ref }}"
+          input_ref="${{ github.event.inputs.upstream_ref.default }}"
 
           if [[ -z "$input_ref" ]]; then
             echo "No tag provided. Fetching latest stable (non-rc) release tag…"
@@ -220,4 +219,3 @@ jobs:
             ```
             ${{ env.DIFF }}
             ```
-
