--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/example/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/example/kustomization.yaml
@@ -36,31 +36,31 @@ resources:
   # Cert-Manager
   # - ../common/cert-manager/base
   - ../common/cert-manager/kubeflow-issuer/base
-# Istio
-# - ../common/istio-1-24/istio-crds/base
-# - ../common/istio-1-24/istio-namespace/base
-# - ../common/istio-1-24/istio-install/overlays/oauth2-proxy
-# oauth2-proxy
-# NOTE: only uncomment ONE of the following overlays, depending on your cluster type
-# - ../common/oauth2-proxy/overlays/m2m-dex-only     # for all clusters
-#- ../common/oauth2-proxy/overlays/m2m-dex-and-kind # for KIND clusters (allows K8S JWTs for gateway auth)
-#- ../common/oauth2-proxy/overlays/m2m-dex-and-eks  # for EKS clusters (NOTE: requires you to configure issuer, see overlay)
+  # Istio
+  - ../common/istio-1-24/istio-crds/base
+  - ../common/istio-1-24/istio-namespace/base
+  - ../common/istio-1-24/istio-install/overlays/oauth2-proxy
+  # oauth2-proxy
+  # NOTE: only uncomment ONE of the following overlays, depending on your cluster type
+  - ../common/oauth2-proxy/overlays/m2m-dex-only # for all clusters
+  #- ../common/oauth2-proxy/overlays/m2m-dex-and-kind # for KIND clusters (allows K8S JWTs for gateway auth)
+  #- ../common/oauth2-proxy/overlays/m2m-dex-and-eks  # for EKS clusters (NOTE: requires you to configure issuer, see overlay)
 
-# Dex
-# - ../common/dex/overlays/oauth2-proxy
-# KNative
-# - ../common/knative/knative-serving/overlays/gateways
-# Uncomment the following line if `knative-eventing` is required
-# - ../common/knative/knative-eventing/base
-# - ../common/istio-1-24/cluster-local-gateway/base
-# Kubeflow namespace
-# - ../common/kubeflow-namespace/base
-# NetworkPolicies
-# - ../common/networkpolicies/base
-# Kubeflow Roles
-# - ../common/kubeflow-roles/base
-# Kubeflow Istio Resources
-# - ../common/istio-1-24/kubeflow-istio-resources/base
+  # Dex
+  - ../common/dex/overlays/oauth2-proxy
+  # KNative
+  - ../common/knative/knative-serving/overlays/gateways
+  # Uncomment the following line if `knative-eventing` is required
+  # - ../common/knative/knative-eventing/base
+  # - ../common/istio-1-24/cluster-local-gateway/base
+  # Kubeflow namespace
+  - ../common/kubeflow-namespace/base
+  # NetworkPolicies
+  - ../common/networkpolicies/base
+  # Kubeflow Roles
+  - ../common/kubeflow-roles/base
+  # Kubeflow Istio Resources
+  - ../common/istio-1-24/kubeflow-istio-resources/base
 
 # Kubeflow Pipelines
 # - ../apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
