--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
@@ -4,7 +4,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: kubeflow
-  namespace: istio-system
+  namespace: kubeflow
 spec:
   hostnames: ["kubeflow.goyangi.cloud"]
   parentRefs:
