chore: add namespace

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/example/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/example/kustomization.yaml
@@ -87,7 +87,7 @@ resources:
   # Training Operator
   - ../apps/training-operator/upstream/overlays/kubeflow
   # User namespace
-  # - ../common/user-namespace/base
+  - ../common/user-namespace/base
 
   # KServe
   - ../apps/kserve/kserve
