--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/user-namespace/base/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/user-namespace/base/kustomization.yaml
@@ -8,6 +8,7 @@ configMapGenerator:
 - envs:
   - ./params.env
   name: default-install-config
+  namespace: kubeflow
 # These vars are used for substituing in the parameters from the config map
 # into the Profiles custom resource.
 configurations:
