--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 resources:
   - ./upstream/example
   - ./externalsecret.yaml
-  - ./httproute.yaml
+  # - ./httproute.yaml
+  - ./ingress.yaml
