--- a/kubernetes/apps/kubeflow-system/kubeflow/ks.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/ks.yaml
@@ -19,3 +19,25 @@ spec:
     namespace: flux-system
   timeout: 5m
   wait: false
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app kubeflow-gateway
+  namespace: &namespace istio-system
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  interval: 1h
+  path: ./kubernetes/apps/kubeflow-system/kubeflow/gateway
+  prune: true
+  retryInterval: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
+  wait: false
