--- a/kubernetes/apps/kubeflow-system/kubeflow/gateway/gateway.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/gateway/gateway.yaml
@@ -11,6 +11,9 @@ spec:
   infrastructure:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
+  addresses:
+    - value: 192.168.1.157
+      type: IPAddress
   listeners:
     - name: http
       protocol: HTTP
