--- a/kubernetes/apps/kubeflow-system/kubeflow/ks.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app kubeflow
-  namespace: &namespace kubeflow-system
+  namespace: kubeflow-system
 spec:
   commonMetadata:
     labels:
