--- a/kubernetes/apps/kubeflow-system/kubeflow/gateway/istio.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/gateway/istio.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: &hostname istio.goyangi.cloud
 spec:
-  gatewayClassName: cilium
+  gatewayClassName: istio
   addresses:
     - type: IPAddress
       value: 192.168.1.157
