--- a/kubernetes/apps/kube-system/kubeflow/ks.yaml
+++ b/kubernetes/apps/kube-system/kubeflow/ks.yaml
@@ -3,19 +3,20 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app kubeflow
-  namespace: kubeflow-system
+  name: &app kubeflow-gateway
+  namespace: &namespace kube-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/kubeflow-system/kubeflow/manifests
+  path: ./kubernetes/apps/kube-system/kubeflow/gateway
   prune: true
   retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
   wait: false
