chore: set gateway

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
@@ -9,7 +9,8 @@ spec:
   hostnames: ["kubeflow.goyangi.cloud"]
   parentRefs:
     - name: istio
-      namespace: istio-system
+      namespace: kube-system
+      sectionName: https
   rules:
     - backendRefs:
         - name: istio-ingressgateway
