chore: yeet istio gateway

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
@@ -8,11 +8,11 @@ metadata:
 spec:
   hostnames: ["kubeflow.goyangi.cloud"]
   parentRefs:
-    - name: istio
+    - name: internal
       namespace: kube-system
       sectionName: https
   rules:
     - backendRefs:
         - name: istio-ingressgateway
           namespace: istio-system
-          port: 8080
+          port: 8443
