chore: assign cilium IP to istio-ingressgateway

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/install.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/install.yaml
@@ -3372,6 +3372,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
+    lbipam.cilium.io/ips: 192.168.1.157, ::ffff:192.168.1.157
   labels:
     app: istio-ingressgateway
     app.kubernetes.io/instance: istio
