--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/install.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/install.yaml
@@ -3373,6 +3373,7 @@ kind: Service
 metadata:
   annotations:
     lbipam.cilium.io/ips: 192.168.1.157, ::ffff:192.168.1.157
+    external-dns.alpha.kubernetes.io/target: kubeflow.goyangi.cloud
   labels:
     app: istio-ingressgateway
     app.kubernetes.io/instance: istio
