--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/patches/service.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/patches/service.yaml
@@ -3,5 +3,8 @@ kind: Service
 metadata:
   name: istio-ingressgateway
   namespace: istio-system
+  annotations:
+    lbipam.cilium.io/ips: 192.168.1.157, ::ffff:192.168.1.157
+    external-dns.alpha.kubernetes.io/target: internal.goyangi.cloud
 spec:
-  type: ClusterIP
+  type: LoadBalancer
