--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/patches/service.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/upstream/common/istio-1-24/istio-install/base/patches/service.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: istio-system
   annotations:
     lbipam.cilium.io/ips: 192.168.1.157, ::ffff:192.168.1.157
-    external-dns.alpha.kubernetes.io/target: internal.goyangi.cloud
+    external-dns.alpha.kubernetes.io/target: kubeflow.goyangi.cloud
 spec:
   type: LoadBalancer
