--- a/kubernetes/apps/default/stash/app/helmrelease.yaml
+++ b/kubernetes/apps/default/stash/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               STASH_CONFIG_FILE: /config/config.yml
               STASH_STASH: /media/
               STASH_GENERATED: /generated/
-              STASH_METADATA: /root/.stash
+              STASH_METADATA: /metadata
               STASH_CACHE: /cache/
             probes:
               liveness: &probes
