chore: update workflow

--- a/.github/workflows/sync-kubeflow.yaml
+++ b/.github/workflows/sync-kubeflow.yaml
@@ -77,7 +77,8 @@ jobs:
         with:
           owner: kubeflow
           repository: manifests
-          branch: ${{ needs.setup.outputs.upstream_ref }}
+          branch: "${{ needs.setup.outputs.upstream_ref }}"
+          depth: 1
 
       - name: Sync selected folders
         id: check
