--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -134,8 +134,11 @@ spec:
           revision: 3
           datasource: Prometheus
         external-secrets:
-          url: https://raw.githubusercontent.com/external-secrets/external-secrets/main/docs/snippets/dashboard.json
-          datasource: Prometheus
+          # renovate: depName="External Secrets"
+          gnetId: 21640
+          revision: 4
+          datasource:
+            - { name: DS_METRICS, value: Prometheus }
         flux-cluster:
           url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/cluster.json
           datasource: Prometheus
