--- a/kubernetes/apps/database/emqx/cluster/podmonitor.yaml
+++ b/kubernetes/apps/database/emqx/cluster/podmonitor.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/monitoring.coreos.com/podmonitor_v1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/podmonitor_v1.json
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
@@ -23,5 +23,10 @@ spec:
           targetLabel: from
         - action: replace
           # fix value, don't modify
-          sourceLabels: ['pod']
-          targetLabel: "instance"
+          sourceLabels:
+            - pod
+          targetLabel: instance
+        - action: replace
+          # for dashboards
+          replacement: emqx
+          targetLabel: job
