feat: add kubeflow patches
* adds patching over upstream manifests

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -9,33 +9,35 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
+    creationPolicy: Merge
     name: mlpipeline-db-credentials
     template:
       data:
-        username: "{{ .KUBEFLOW_MARIADB_USER }}"
-        password: "{{ .KUBEFLOW_MARIADB_PASSWORD }}"
+        username: "root"
+        password: "{{ .MARIADB_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
-        key: kubeflow
+        key: mariadb
 ---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: metadb-db-credentials
+  name: metadata-db-secrets
   namespace: kubeflow
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: metadb-db-credentials
+    creationPolicy: Merge
+    name: metadata-db-secrets
     template:
       data:
-        username: "{{ .KUBEFLOW_MARIADB_USER }}"
-        password: "{{ .KUBEFLOW_MARIADB_PASSWORD }}"
+        MYSQL_USER_NAME: root
+        MYSQL_ROOT_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
-        key: kubeflow
+        key: mariadb
 ---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
@@ -47,6 +49,7 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
+    creationPolicy: Merge
     name: mlpipeline-minio-artifact
     template:
       data:
@@ -59,18 +62,50 @@ spec:
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: oidc-client
-  namespace: istio-system
+  name: katib-mysql-secrets
+  namespace: kubeflow
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: oidc-client
+    creationPolicy: Merge
+    name: katib-mysql-secrets
     template:
       data:
-        client_id: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
-        client_secret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
+        KATIB_MYSQL_DB_DATABASE: katib
+        KATIB_MYSQL_DB_HOST: mariadb.database.svc.cluster.local
+        KATIB_MYSQL_DB_PORT: "3306"
+        DB_USER: "root"
+        DB_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
-        key: kubeflow
+        key: mariadb
+---
+kind: Secret
+apiVersion: v1
+metadata:
+  name: mysql-secret
+stringData:
+  username: root
+  password: ""
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: mysql-secret
+  namespace: kubeflow
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    creationPolicy: Merge
+    name: mysql-secret
+    template:
+      data:
+        username: root
+        password: "{{ .MARIADB_ROOT_PASSWORD }}"
+  dataFrom:
+    - extract:
+        key: mariadb
