--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -1,6 +1,185 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+# From ./upstream/example/kustomization.yaml. Review when version changes.
+sortOptions:
+  order: legacy
+  legacySortOptions:
+    orderFirst:
+      - Namespace
+      - ResourceQuota
+      - StorageClass
+      - CustomResourceDefinition
+      - MutatingWebhookConfiguration
+      - ServiceAccount
+      - PodSecurityPolicy
+      - NetworkPolicy
+      - Role
+      - ClusterRole
+      - RoleBinding
+      - ClusterRoleBinding
+      - ConfigMap
+      - Secret
+      - Endpoints
+      - Service
+      - LimitRange
+      - PriorityClass
+      - PersistentVolume
+      - PersistentVolumeClaim
+      - Deployment
+      - StatefulSet
+      - CronJob
+      - PodDisruptionBudget
+    orderLast:
+      - ValidatingWebhookConfiguration
+
 resources:
-  - ./upstream/example
   - ./externalsecret.yaml
+  - ./httproute.yaml
+  - ./requestauthentication.yaml
+
+  # ClusterIssuer
+  - ./upstream/common/cert-manager/kubeflow-issuer/base
+  # Istio
+  - ./upstream/common/istio-1-24/istio-crds/base
+  - ./upstream/common/istio-1-24/istio-namespace/base
+  - ./upstream/common/istio-1-24/istio-install/overlays/oauth2-proxy
+  # oauth2-proxy
+  - ./upstream/common/oauth2-proxy/overlays/m2m-dex-only
+
+  # KNative
+  - ./upstream/common/knative/knative-serving/overlays/gateways
+  - ./upstream/common/knative/knative-eventing/base
+  - ./upstream/common/istio-1-24/cluster-local-gateway/base
+  # Kubeflow namespace
+  - ./upstream/common/kubeflow-namespace/base
+  # NetworkPolicies
+  - ./upstream/common/networkpolicies/base
+  # Kubeflow Roles
+  - ./upstream/common/kubeflow-roles/base
+  # Kubeflow Istio Resources
+  - ./upstream/common/istio-1-24/kubeflow-istio-resources/base
+
+  # Kubeflow Pipelines
+  - ./upstream/apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
+  # Katib
+  - ./upstream/apps/katib/upstream/installs/katib-with-kubeflow
+  # Central Dashboard
+  - ./upstream/apps/centraldashboard/overlays/oauth2-proxy
+  # Admission Webhook
+  - ./upstream/apps/admission-webhook/upstream/overlays/cert-manager
+  # Jupyter Web App
+  - ./upstream/apps/jupyter/jupyter-web-app/upstream/overlays/istio
+  # Notebook Controller
+  - ./upstream/apps/jupyter/notebook-controller/upstream/overlays/kubeflow
+  # Profiles + KFAM
+  - ./upstream/apps/profiles/upstream/overlays/kubeflow
+  # PVC Viewer
+  - ./upstream/apps/pvcviewer-controller/upstream/base
+  # Volumes Web App
+  - ./upstream/apps/volumes-web-app/upstream/overlays/istio
+  # Tensorboards Controller
+  - ./upstream/apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
+  # Tensorboard Web App
+  - ./upstream/apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
+  # Training Operator
+  - ./upstream/apps/training-operator/upstream/overlays/kubeflow
+
+  # KServe
+  - ./upstream/apps/kserve/kserve
+  - ./upstream/apps/kserve/models-web-app/overlays/kubeflow
+
+components:
+  - ./upstream/experimental/security/PSS/dynamic/restricted
+
+patches:
+# istio
+- path: ./patches/istio/delete.global-deny-all.authorizationpolicy.yaml
+  target:
+    name: global-deny-all
+
+- path: ./patches/istio/patch.istio-sidecar-injector.configmap.yaml
+  target:
+    name: istio-sidecar-injector
+
+# oauth2-proxy
+- path: ./patches/oauth2-proxy/patch.pocket-id-jwt.requestauthentication.yaml
+  target:
+    name: dex-jwt
+
+# kserve
+- path: ./patches/kserve/patch.clusterservingruntime.yaml
+  target:
+    namespace: kserve
+    kind: ClusterServingRuntime
+
+- path: ./patches/kserve/patch.clusterstoragecontainer.yaml
+  target:
+    namespace: kserve
+    kind: ClusterServingRuntime
+
+# Pipelines
+- path: ./patches/pipelines/patch.minio.destinationrule.yaml
+  target:
+    namespace: kubeflow
+    name: ml-pipeline-minio
+
+- path: ./patches/pipelines/patch.minio.authorizationpolicy.yaml
+  target:
+    namespace: kubeflow
+    kind: AuthorizationPolicy
+    name: minio-service
+
+- path: ./patches/pipelines/patch.ml-pipeline-mysql.destinationrule.yaml
+  target:
+    namespace: kubeflow
+    kind: DestinationRule
+    name: ml-pipeline-mysql
+
+- path: ./patches/pipelines/patch.mysql.authorizationpolicy.yaml
+  target:
+    namespace: kubeflow
+    kind: AuthorizationPolicy
+    name: mysql
+
+- path: ./patches/pipelines/delete.minio.deployment.yaml
+  target:
+    name: minio
+
+- path: ./patches/pipelines/delete.minio.pvc.yaml
+  target:
+    name: minio-pvc
+
+- path: ./patches/pipelines/delete.minio.service.yaml
+  target:
+    name: minio-service
+
+- path: ./patches/pipelines/patch.metadata-db-parameters.configmap.yaml
+  target:
+    name: metadata-db-parameters
+
+- path: ./patches/pipelines/patch.pipeline-install-config.configmap.yaml
+  target:
+    name: pipeline-install-config
+
+- path: ./patches/pipelines/patch.workflow-controller-configmap.configmap.yaml
+  target:
+    name: workflow-controller-configmap
+
+# all resources
+- path: ./patches/patch.deployment.yaml
+  target:
+    kind: Deployment
+- path: ./patches/patch.daemonset.yaml
+  target:
+    kind: DaemonSet
+
+configMapGenerator:
+  - name: oauth2-proxy
+    namespace: oauth2-proxy
+    behavior: replace
+    files:
+      - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
+generatorOptions:
+  disableNameSuffixHash: true
