feat(kubeflow): add patches

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -78,6 +78,7 @@ spec:
         KATIB_MYSQL_DB_PORT: "3306"
         DB_USER: "root"
         DB_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
+        MYSQL_ROOT_PASSWORD: "{{ .MARIADB_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
         key: mariadb
