--- a/kubernetes/apps/default/mlflow/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mlflow/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
             env:
               MLFLOW_ARTIFACTS_DESTINATION: s3://mlflow
               MLFLOW_HOST: 0.0.0.0
-              MLFLOW_PORT: 80
+              MLFLOW_PORT: &port 80
               MLFLOW_WORKERS: 4
               MLFLOW_EXPOSE_PROMETHEUS: true
               MLFLOW_AUTH_CONFIG_PATH: /config/auth.ini
@@ -52,7 +52,7 @@ spec:
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities: {drop: ["ALL"]}
+              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 10m
@@ -66,7 +66,7 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-        seccompProfile: {type: RuntimeDefault}
+        seccompProfile: { type: RuntimeDefault }
         supplementalGroups: [10000]
     service:
       app:
@@ -74,16 +74,17 @@ spec:
         ports:
           http:
             port: *port
-    ingress:
+    route:
       app:
-        className: internal
-        hosts:
-          - host: mlflow.goyangi.cloud
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
+        hostnames: ["mlflow.goyangi.cloud"]
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: *app
+                port: *port
     persistence:
       auth-config:
         type: secret
