chore: use variable

--- a/kubernetes/apps/default/mlflow/app/externalsecret.yaml
+++ b/kubernetes/apps/default/mlflow/app/externalsecret.yaml
@@ -12,8 +12,8 @@ spec:
     template:
       data:
         INIT_POSTGRES_DBNAME: mlflow_backend mlflow_registry
-        INIT_POSTGRES_HOST: postgres16-rw.database.svc.cluster.local
-        INIT_POSTGRES_USER: mlflow
+        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
+        INIT_POSTGRES_USER: "{{ .MLFLOW_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .MLFLOW_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MLFLOW_TRACKING_USERNAME: "{{ .MLFLOW_TRACKING_USERNAME }}"
