chore: disable kubeflow
* TODO: kustomize update resources

--- a/kubernetes/apps/kubeflow-system/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kustomization.yaml
@@ -6,4 +6,5 @@ namespace: kubeflow-system
 components:
   - ../../components/common
 resources:
-  - ./kubeflow/ks.yaml
+  []
+  # - ./kubeflow/ks.yaml
