chore: add claim

--- a/kubernetes/apps/default/mlflow/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mlflow/app/helmrelease.yaml
@@ -84,6 +84,8 @@ spec:
               - name: *app
                 port: *port
     persistence:
+      config:
+        existingClaim: *app
       auth-config:
         type: secret
         name: mlflow-secret
