--- a/kubernetes/apps/default/mlflow/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mlflow/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
                 memory: 16Gi
     defaultPodOptions:
       securityContext:
-        runAsNonRoot: true
+        runAsNonRoot: false
         runAsUser: 0
         runAsGroup: 0
         fsGroup: 1000
