--- a/kubernetes/apps/default/mlflow/app/externalsecret.yaml
+++ b/kubernetes/apps/default/mlflow/app/externalsecret.yaml
@@ -18,8 +18,8 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MLFLOW_TRACKING_USERNAME: "{{ .MLFLOW_TRACKING_USERNAME }}"
         MLFLOW_TRACKING_PASSWORD: "{{ .MLFLOW_TRACKING_PASSWORD }}"
-        MLFLOW_BACKEND_STORE_URI: "postgres://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local:5432/mlflow_backend"
-        MLFLOW_REGISTRY_STORE_URI: "postgres://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local:5432/mlflow_registry"
+        MLFLOW_TRACKING_URI: "postgres://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local:5432/mlflow_backend"
+        MLFLOW_REGISTRY_URI: "postgres://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local:5432/mlflow_registry"
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
   dataFrom:
