--- a/kubernetes/apps/default/mlflow/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mlflow/app/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
               MLFLOW_WORKERS: 4
               MLFLOW_EXPOSE_PROMETHEUS: true
               MLFLOW_S3_ENDPOINT_URL: http://minio.default.svc.cluster.local:9000
+              MLFLOW_S3_IGNORE_TLS: true
             envFrom: *envFrom
             probes:
               liveness: &probes
