--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/patch.deployment.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/patch.deployment.yaml
@@ -4,8 +4,11 @@ metadata:
   name: not-used
   annotations:
     reloader.stakater.com/auto: "true"
-containers:
-  resources:
-    requests:
-      cpu: 10m
-      memory: 64Mi
+spec:
+  template:
+    spec:
+      containers:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 64Mi
